--- a/master.html
+++ b/master.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
-<meta name="googlebot" content="noindex,follow" /><meta name="robots" content="noindex, follow" /><
+<meta name="googlebot" content="noindex,follow" />
+	<meta name="robots" content="noindex, follow" />
 <head>
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
 <script async='async' src='https://www.googletagmanager.com/gtag/js?id=UA-135219917-7'></script>
