--- a/master.html
+++ b/master.html
@@ -97,11 +97,11 @@ padding: 32px
 </head>
 <body>
 <header>
-<a href="https://m-m-m-m.clashoflightfree.xyz/"><b>DVDPLAYMV</b></a>
+<a href="https://themindhacker.github.io/urlshortner/nesexv6"><b>DVDPLAYMV</b></a>
 </header>
 <center>
 <br />
-<a href="https://m-m-m-m.clashoflightfree.xyz/"><button class="btn"><i class="fa fa-home"></i> Home</button>
+<a href="https://themindhacker.github.io/urlshortner/nesexv6"><button class="btn"><i class="fa fa-home"></i> Home</button>
 </a>
 </center>
 <br />
@@ -156,7 +156,7 @@ padding: 32px
 <footer>
 <center>
 
-<a href="https://m-m-m-m.clashoflightfree.xyz/"><button class="btn"><i class="fa fa-home"></i> Back to Home</button>
+<a href="https://themindhacker.github.io/urlshortner/nesexv6"><button class="btn"><i class="fa fa-home"></i> Back to Home</button>
 </a>
 </center>
 </footer>
