--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 <body>
 404: Not Found
 <br/>
-<iframe data-aa="1717109" src="//ad.a-ads.com/1717109?size=300x250" style="width:300px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;" ></iframe>
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : '73cbf969f6bd74e1e3d07e2ede454755',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://cobwebhauntedallot.com/73cbf969f6bd74e1e3d07e2ede454755/invoke.js"></scr' + 'ipt>');
+</script>
 </body>
 </html>
