--- a/index.html
+++ b/index.html
@@ -11,15 +11,7 @@
 404: Not Found
 <br/>
 
-<script type="text/javascript">
-	atOptions = {
-		'key' : '73cbf969f6bd74e1e3d07e2ede454755',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://cobwebhauntedallot.com/73cbf969f6bd74e1e3d07e2ede454755/invoke.js"></scr' + 'ipt>');
-</script>
+<script type="text/javascript" src="https://uprimp.com/bnr.php?section=General&pub=772949&format=300x250&ga=g&bg=2"></script>
+<noscript><a href="https://yllix.com/publishers/772949" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/300x250.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
 </body>
 </html>
