--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 404: Not Found
 <br/>
 
-<script type="text/javascript" src="https://uprimp.com/bnr.php?section=General&pub=772949&format=300x250&ga=g&bg=2"></script>
-<noscript><a href="https://yllix.com/publishers/772949" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/300x250.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
+<script type="text/javascript" src="https://uprimp.com/bnr.php?section=General&pub=772949&format=300x50&ga=g&mbtodb=1"></script>
+<noscript><a href="https://yllix.com/publishers/772949" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub_0ei6v1.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
 </body>
 </html>
