--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta content='width=device-width, initial-scale=1' name='viewport' />
 </head>
 <body>
-
+Not Found
 <br/>
 
 <script type="text/javascript" src="https://uprimp.com/bnr.php?section=General&pub=772949&format=300x50&ga=g&mbtodb=1"></script>
