--- a/index.html
+++ b/index.html
@@ -11,60 +11,7 @@
 Not Found
 <br/>
 
-<script type="text/javascript" src="https://uprimp.com/bnr.php?section=General&pub=772949&format=300x50&ga=g&mbtodb=1"></script>
-<noscript><a href="https://yllix.com/publishers/772949" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub_0ei6v1.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
-<style>
-
- .adBottom {
- left:0;
- position: fixed;
- text-align:center;
- bottom: 0px;
- width:100%;
- z-index:999;
- }
- }
-</style>
-
-<div class="adBottom">
- <script type="text/javascript">
-	atOptions = {
-		'key' : 'fa447f02c43901a1fc3ccb37447f1ffc',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://cobwebhauntedallot.com/fa447f02c43901a1fc3ccb37447f1ffc/invoke.js"></scr' + 'ipt>');
-</script>
-</div>
-<style>
-
- .adBottom1 {
- left:0;
- position: fixed;
- text-align:center;
- top: 0px;
- width:100%;
- z-index:999;
- }
- }
-</style>
-
-<div class="adBottom1">
- <script type="text/javascript">
-	atOptions = {
-		'key' : 'fa447f02c43901a1fc3ccb37447f1ffc',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://cobwebhauntedallot.com/fa447f02c43901a1fc3ccb37447f1ffc/invoke.js"></scr' + 'ipt>');
-</script>
-</div>
-
- 
+<script type="text/javascript" src="https://goraps.com/mobile_redir.php?section=General&pub=772949&ga=g"></script>
  
  
 </body>
